fix cart alignment not matching other nav items

--- a/src/components/menuItem/MenuItem.scss
+++ b/src/components/menuItem/MenuItem.scss
@@ -1,19 +1,20 @@
 @import './../designUtils/colors';
 
 .menuItem{
-  // display: flex;
-  // justify-content: center;
-  // align-items: flex-end;
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
     color: $icon-color;
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Ubuntu, Helvetica Neue, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
-    font-weight: 200;
-    line-height: 43px;
+    font-weight: 300;
     cursor: pointer;
-    padding: 8px 10px 0px;
+    padding: 14px 8px;
+    min-height: 30px;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
     list-style-type: none;
     text-decoration: none;
+    line-height: 30px;
     
 
     &:hover{
@@ -29,23 +30,14 @@
         background-color: red;
         font-size: 14px;
         position: relative;
-        left: 15px;
-        bottom: 25px;
-        border-radius: 100%;
+        bottom: 15px;
+        border-radius: 50%;
         height: 20px;
         width: 20px;
-        // list-style-type: none;
       }
-    //  
-    //   span{
-    //     position: relative;
-    //     top: 3px;
-    //   }
+    
       .cart-icon{
-        position: relative;
-        top: 22px;
-        font-size: 20px;
-        padding-right: 18px;
+        font-size: 22px;
       }
     
 }
